# cffi

./: .rustfmt.toml  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md
.github/workflows/: ci.yml  clippy.yml
cthulhu/: Cargo.toml
cthulhu/src/: lib.rs
cthulhu/tests/: examples.rs
cthulhu_calling/: Cargo.toml
cthulhu_calling/src/: lib.rs
cthulhu_calling/tests/: examples.rs
cthulhu_macro/: Cargo.toml  build.rs
cthulhu_macro/src/: call_fn.rs  call_impl.rs  ext.rs  function.rs  lib.rs  ptr_type.rs  return_type.rs
cthulhu_macro/src/attr/: invoke.rs  marshal.rs
cthulhu_tests/: Cargo.toml
cthulhu_tests/tests/: ui.rs  working.rs
cthulhu_tests/tests/compile-fails/: not_a_function.stderr  not_a_funtion.rs  not_a_funtion.stderr  pattern_params.rs  pattern_params.stderr
cursed/: Cargo.toml
cursed/src/: arc.rs  arc_ref.rs  bool.rs  box_ref.rs  boxed.rs  copy.rs  lib.rs  path.rs  pathbuf.rs  str.rs  string.rs  unit.rs  url.rs  vec.rs  vec_ref.rs
cursed/src/pathbuf/: unix.rs  windows.rs
impl/: Cargo.toml  build.rs
impl/src/: call_fn.rs  call_impl.rs  ext.rs  function.rs  lib.rs  ptr_type.rs
impl/src/attr/: invoke.rs  marshal.rs  mod.rs
src/: arc.rs  arc_ref.rs  bool.rs  box_ref.rs  boxed.rs  copy.rs  cstr.rs  lib.rs  str.rs  string.rs  unit.rs  url.rs  vec.rs  vec_ref.rs
src/pathbuf/: unix.rs  windows.rs
