[package]
name = "cthulhu"
description = "Cthulhu safe-ish C FFI interface generator macro"
version = "0.1.0"
authors = [
  "Brendan Molloy <brendan@bbqsrc.net>",
  "Pascal Hertleif <pascal@technocreatives.com>"
]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/killercup/cthulhu"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.5"
quote = "1.0.2"
proc-macro2 = "1.0.3"
darling = "0.10.0"
cthulhu_macro = { path = "../cthulhu_macro" }

[dev-dependencies]
assert_tokens_eq = { git = "https://github.com/killercup/assert_tokens_eq" }
