[package]
name = "cthulhu_calling"
description = "Helps with calling Cthulhu"
version = "0.1.0"
authors = ["Pascal Hertleif <pascal@technocreatives.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/killercup/cthulhu"
readme = "README.md"

[dependencies]
syn = { version = "1.0.5", features = ["full", "extra-traits"] }
quote = "1.0.2"
proc-macro2 = "1.0.1"
libc = "0.2.62"
