[package]
name = "cthulhu_calling"
description = "Helps with calling Cthulhu"
version = "0.1.0"
authors = ["Pascal Hertleif <pascal@technocreatives.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/killercup/cthulhu"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
syn = { version = "1.0.5", features = ["full", "extra-traits"] }
quote = "1.0.2"
proc-macro2 = "1.0.3"
libc = "0.2.62"
darling = "0.10.0"

[dev-dependencies]
assert_tokens_eq = { git = "https://github.com/killercup/assert_tokens_eq" }
