[package]
name = "cthulhu_macro"
description = "Cthulhu safe-ish C FFI interface generator macro (support crate)"
version = "0.1.0"
authors = [
  "Brendan Molloy <brendan@bbqsrc.net>",
  "Pascal Hertleif <pascal@technocreatives.com>"
]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/killercup/cthulhu"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
syn = { version = "1.0.5", features = ["full", "extra-traits"] }
quote = "1.0.2"
proc-macro2 = "1.0.3"
libc = "0.2.62"
darling = "0.10.0"
phf = "0.7.24"
heck = "0.3"

[dev-dependencies]
assert_tokens_eq = { git = "https://github.com/killercup/assert_tokens_eq" }

[build-dependencies]
phf_codegen = "0.7.24"
syn = { version = "1.0.5", features = ["full", "extra-traits"] }
quote = "1.0.2"
proc-macro2 = "1.0.3"

