[package]
name = "cthulhu_tests"
version = "0.1.0"
authors = ["Pascal Hertleif <pascal@technocreatives.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cthulhu_calling = { path = "../cthulhu_calling/" }
cthulhu = { path = "../cthulhu_macro/" }
libc = "*"

[dev-dependencies]
trybuild = "1.0.9"
