[package]
name = "cthulhu_tests"
version = "0.1.0"
authors = [
  "Brendan Molloy <brendan@bbqsrc.net>",
  "Pascal Hertleif <pascal@technocreatives.com>"
]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
cursed = { path = "../cursed/" }
cthulhu = { path = "../cthulhu/" }
libc = "0.2.62"
darling = "0.10.0"

[dev-dependencies]
trybuild = "1.0.11"
