[package]
name = "cursed"
description = "Support library for Cthulhu safe-ish C FFI interface generator"
version = "0.1.0"
authors = [
  "Brendan Molloy <brendan@bbqsrc.net>",
  "Pascal Hertleif <pascal@technocreatives.com>"
]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/killercup/cthulhu"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2.62"
