[package]
name = "cffi-impl"
description = "Safe* C FFI interface generator - macro"
version = "0.2.0-dev"
authors = [
  "Brendan Molloy <brendan@bbqsrc.net>",
  "Pascal Hertleif <pascal@technocreatives.com>"
]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/cffi-rs/cffi"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.52"
quote = "1.0.7"
proc-macro2 = "1.0.24"
darling = "0.20.8"
heck = "0.4.1"
ctor = "0.2.7"
log = "0.4.11"
pretty_env_logger = "0.5.0"
phf = "0.11.2"

[dev-dependencies]
assert_tokens_eq = { git = "https://github.com/killercup/assert_tokens_eq" }

[build-dependencies]
phf_codegen = "0.11.2"
syn = { version = "2.0.52", features = ["full", "extra-traits"] }
quote = "1.0.2"
proc-macro2 = "1.0.4"
